--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+.home1{
+  
+    padding:50px 150px;
+    margin-top: 50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home1 p{
+    font-size: 28px;
+    font-family: 'Montserrat',sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home1 span{
+    color:rgb(161,23,97) ;
+    font-weight: 600;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home2{
+    padding:20px 150px;
 }
-
-.App-link {
-  color: #61dafb;
+.home2 h1{
+    font-family: 'Merriweather', serif;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: rgb(161,23,97);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home2 p{
+    font-size: 20px;
+    font-family: 'Montserrat',sans-serif;
 }
