--- a/myapp/src/components/header/header.css
+++ b/myapp/src/components/header/header.css
@@ -35,7 +35,7 @@
 .contact{
     padding:8px 15px;
     border: none;
-    background-color: rgb(161,23,97);
+    background-color: #37c9ef;
     color:white;
     font-size: 18px;
     font-family: 'Montserrat',sans-serif;
