--- a/myapp/src/components/home/home.css
+++ b/myapp/src/components/home/home.css
@@ -15,7 +15,7 @@
     font-family: 'Montserrat',sans-serif;
 }
 .home1 span{
-    color:rgb(161,23,97) ;
+    color:#37c9ef;
     font-weight: 600;
 }
 .home2{
@@ -28,7 +28,7 @@
     text-align: center;
     font-weight: 500;
     font-size: 25px;
-    color: rgb(161,23,97);
+    color: #2c92d5;
 }
 .home2 p{
     font-size: 20px;
