--- a/myapp/src/components/home/home.css
+++ b/myapp/src/components/home/home.css
@@ -15,7 +15,7 @@
     font-family: 'Montserrat',sans-serif;
 }
 .home1 span{
-    color:#37c9ef;
+    color:rgb(161,23,97) ;
     font-weight: 600;
 }
 .home2{
@@ -25,10 +25,11 @@
 .home2 h1{
     font-family: 'Merriweather', serif;
     margin-bottom: 20px;
+    margin-top: 50px;
     text-align: center;
     font-weight: 500;
     font-size: 25px;
-    color: #2c92d5;
+    color: rgb(161,23,97);
 }
 .home2 p{
     font-size: 20px;
@@ -42,4 +43,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.factors{
+    width:95%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.factors img{
+    width: 100%;
+    
+}
+.factors h2{
+    margin-top: 100px;
+    font-size: 35px;
+    font-weight: 600;
+    color: rgb(161,23,97);
+    font-family: 'Montserrat',sans-serif;
 }
